bare-installs: split into individual app scripts + orchestrator install.sh